--- a/mystyle.css
+++ b/mystyle.css
@@ -4,6 +4,10 @@ body {
   padding: 0;
 }
 
+p{
+  display: inline-block;
+}
+
 #p_about{
   height: 50px;
   padding-right: 50px;
@@ -52,7 +56,7 @@ header {
   border: 1px solid #ddd;
 }
 
-#divForm h1 {
+#divForm, h1 {
   text-align: center;
 }
 
@@ -117,10 +121,23 @@ tfoot {
 }
 
 #footerDiv {
-  height: 102px;
+  height: 112px;
   background-color: #333;
   color: white;
   text-align: center;
   padding: 20px;
   margin-top: 20px;
+}
+
+small{
+  color: red;
+}
+
+.btnJS{
+  background-color: rgb(255, 153, 0);
+  color: white; 
+  padding: 10px 20px; 
+  border: none; 
+  border-radius: 4px; 
+  cursor: pointer;
 }
