--- a/mystyle.css
+++ b/mystyle.css
@@ -82,7 +82,33 @@ header {
   cursor: pointer;
 }
 
+#btnUpdate{
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#btnInsert{
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 #btn1:hover {
+  background-color: #45a049;
+}
+
+#btnUpdate:hover {
+  background-color: #45a049;
+}
+
+#btnInsert:hover {
   background-color: #45a049;
 }
 
